# sw-campus-ai

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-dev.yml  build-release-image.yml  build-release.yml  docker.yml  update-manifest-ai.yml  update-manifest.yml
app/: main.py
app/ocr/: ocr_engine.py  router.py  service.py
